# glored

./: setup.cfg
src/glored/: interface.py
tests/: profile.py
