[metadata]
name = glored
version = 0.0.2
author = perry
author_email = noemail@example.com
description = Redis client that runs as a unique global object within the library and supports asynchronous calls
long_description = file: README.md
long_description_content_type = text/markdown
url = private
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    redis


[options.packages.find]
where = src

[options.package_data]
* = *.ini, *.json
